# CMake

./: LICENSE  README.md
Demo1/: CMakeLists.txt  README.md  main.c
Demo10/: CMakeLists.txt
Demo2/: CMakeLists.txt  README.md
Demo3/: CMakeLists.txt  COPYRIGHT  README.md  runhello.sh
Demo4/: CMakeLists.txt  README.md
Demo4/lib/: CMakeLists.txt  hello.c
Demo5/: CMakeLists.txt  README.md
Demo5/src/: CMakeLists.txt  main.c
Demo6/: CMakeLists.txt  main.c
Demo7/: CMakeLists.txt  MathFunctions.c  main.c
Demo8/: CMakeLists.txt  main.c
Demo9/: CMakeLists.txt  hello.c  main.c
Demo9/math/: CMakeLists.txt  MathFunctions.c
