PROJECT(HELLO C)

MESSAGE(STATUS "test 1 " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "test 2 " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "test 3 " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "test 4 " ${HELLO_SOURCE_DIR})

SET(SRC_LIST main.c)
SET(NAME Harrdy)
MESSAGE(STATUS "test 5 " ${SRC_LIST})
MESSAGE(STATUS "test 6 " ${NAME})

ADD_EXECUTABLE(hello ${SRC_LIST})